--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> EH Project 2 </title>
+    <title> Sad Dads </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
   </head>
