--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <title> Sad Dads </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body></body>
 </html>
