started some basic html and css

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,26 @@
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="navigation">
+        <nav></nav>
+      </div>
+      <h1> Sad Dads </h1>
+      <h2> Concert Tracker </h2>
+    </header>
+<div class="container">
+  <div class="enter">
+    <button> Enter Site </button>
+  </div>
+</div>
+    <footer>
+      <div id="year"></div>
+    </footer>
+
+  </body>
 </html>
