--- a/client/home.html
+++ b/client/home.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Sad Dads </title>
+    <title> Sad Dads - Home </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -17,19 +16,17 @@
   </head>
   <body>
     <header>
-      <div class="navigation">
-        <nav></nav>
-      </div>
-      <h1>Sad Dads</h1>
-      <h2>Concert Tracker</h2>
+        <h3> Sad Dads </h3>
     </header>
-    <div class="container">
-      <div class="enter">
-        <button>Enter Site</button>
-      </div>
+    <div class="menu">
+        <ul>
+            <li> Concerts </li>
+            <li> Venues </li>
+            <li> Artists </li>
+        </ul>
     </div>
-    <footer>
-      <div id="year"></div>
-    </footer>
+    <div>
+        <img src="/images/matt-berninger-sep-2018-2-3.png" class="hero-image" alt="A photo of Matt Berninger singing live. He is leaning into the microphone and has his right hand extended over his head." />
+    </div>
   </body>
 </html>
