minor front end changes

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Sad Dads </title>
+    <title>Sad Dads</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -20,12 +20,12 @@
       <div class="navigation">
         <nav></nav>
       </div>
-      <h1>Sad Dads</h1>
+      <h1 class="landing">Sad Dads</h1>
       <h2>Concert Tracker</h2>
     </header>
     <div class="container">
       <div class="enter">
-        <button>Enter Site</button>
+        <button><a href="/client/home.html"> Enter Site </a></button>
       </div>
     </div>
     <footer>
