--- a/client/home.html
+++ b/client/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Sad Dads - Home </title>
+    <title>Sad Dads - Home</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -16,17 +16,24 @@
   </head>
   <body>
     <header>
-        <h3> Sad Dads </h3>
+      <h3><a href="/client/index.html">Sad Dads</a></h3>
     </header>
     <div class="menu">
-        <ul>
-            <li> Concerts </li>
-            <li> Venues </li>
-            <li> Artists </li>
-        </ul>
+      <ul>
+        <li>Concerts</li>
+        <li>Venues</li>
+        <li>Artists</li>
+      </ul>
     </div>
     <div>
-        <img src="/images/matt-berninger-sep-2018-2-3.png" class="hero-image" alt="A photo of Matt Berninger singing live. He is leaning into the microphone and has his right hand extended over his head." />
+      <img
+        src="/images/matt-berninger-sep-2018-2-3.png"
+        class="hero-image"
+        alt="A photo of Matt Berninger singing live. He is leaning into the microphone and has his right hand extended over his head."
+      />
     </div>
+    <footer>
+      <div id="year"></div>
+    </footer>
   </body>
 </html>
