--- a/client/artists.html
+++ b/client/artists.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sad Dads - Concerts</title>
+    <title> Sad Dads - Artists </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -16,7 +16,14 @@
   </head>
   <body>
     <header>
-      <h3><a href="/client/index.html">Sad Dads</a></h3>
+      <h3><a href="/client/home.html">Sad Dads</a></h3>
     </header>
+    <div class="menu">
+      <ul>
+        <li><a href="/client/concerts.html"> Concerts </a></li>
+        <li><a href="/client/venues.html"> Venues </a></li>
+        <li><a href="/client/artists.html"> Artists </a></li>
+      </ul>
+    </div>
   </body>
 </html>
