--- a/client/home.html
+++ b/client/home.html
@@ -18,11 +18,11 @@
     <header>
       <h3><a href="/client/index.html">Sad Dads</a></h3>
     </header>
-    <div class="menu">
-      <ul>
-        <li>Concerts</li>
-        <li>Venues</li>
-        <li>Artists</li>
+    <div>
+      <ul class="menu">
+        <li class="menu"><a href="/client/concerts.html"> Concerts </a></li>
+        <li class="menu"><a href="/client/venues.html"> Venues </a></li>
+        <li class="menu"><a href="/client/artists.html"> Artists </a></li>
       </ul>
     </div>
     <div>
