--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
       <h1 class="landing">Sad Dads</h1>
       <h2>Concert Tracker</h2>
     </header>
-    <div class="container">
+    <div>
       <div class="enter">
         <button><a href="/client/home.html"> Enter Site </a></button>
       </div>
