--- a/client/artists.html
+++ b/client/artists.html
@@ -6,7 +6,7 @@
     <title> Sad Dads - Artists </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,5 +25,8 @@
         <li><a href="/client/artists.html"> Artists </a></li>
       </ul>
     </div>
+    <footer>
+      <div id="year"></div>
+    </footer>
   </body>
 </html>
