--- a/client/home.html
+++ b/client/home.html
@@ -6,7 +6,7 @@
     <title>Sad Dads - Home</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,8 +18,8 @@
     <header>
       <h3><a href="/client/index.html">Sad Dads</a></h3>
     </header>
-    <div>
-      <ul class="menu">
+    <div class="menu">
+      <ul>
         <li class="menu"><a href="/client/concerts.html"> Concerts </a></li>
         <li class="menu"><a href="/client/venues.html"> Venues </a></li>
         <li class="menu"><a href="/client/artists.html"> Artists </a></li>
