--- a/client/venues.html
+++ b/client/venues.html
@@ -6,7 +6,7 @@
     <title> Sad Dads - Venues </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,5 +33,8 @@
     <li class="venues" id="venue4"><a href="#"></a></li>
   </ul>
 </div>
+<footer>
+  <div id="year"></div>
+</footer>
   </body>
 </html>
