started work on axios calls

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../server.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
