--- a/client/concerts.html
+++ b/client/concerts.html
@@ -17,9 +17,9 @@
     </header>
     <div class="menu">
       <ul class="menu">
-        <li><a href="/client/concerts.html"> Concerts </a></li>
-        <li><a href="/client/venues.html"> Venues </a></li>
-        <li><a href="/client/artists.html"> Artists </a></li>
+        <li id="concerts"><a href="/client/concerts.html"> Concerts </a></li>
+        <li id="venues"><a href="/client/venues.html"> Venues </a></li>
+        <li id="artists"><a href="/client/artists.html"> Artists </a></li>
       </ul>
     </div>
     <div class="concert-list" class="container">
