fixed display issue with footer in html files

--- a/client/home.html
+++ b/client/home.html
@@ -20,9 +20,9 @@
     </header>
     <div class="menu">
       <ul>
-        <li class="menu"><a href="/client/concerts.html"> Concerts </a></li>
-        <li class="menu"><a href="/client/venues.html"> Venues </a></li>
-        <li class="menu"><a href="/client/artists.html"> Artists </a></li>
+        <li class="menu" id="concerts"><a href="/client/concerts.html"> Concerts </a></li>
+        <li class="menu" id="venues"><a href="/client/venues.html"> Venues </a></li>
+        <li class="menu" id="artists"><a href="/client/artists.html"> Artists </a></li>
       </ul>
     </div>
     <div>
