trying to make progress with axios calls

--- a/client/concerts.html
+++ b/client/concerts.html
@@ -6,7 +6,7 @@
     <title>Sad Dads - Concerts</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -17,7 +17,7 @@
     </header>
     <div class="menu">
       <ul class="menu">
-        <li id="concerts"><a href="/client/concerts.html"> Concerts </a></li>
+        <li id="concertsLink"><a href="/client/concerts.html"> Concerts </a></li>
         <li id="venues"><a href="/client/venues.html"> Venues </a></li>
         <li id="artists"><a href="/client/artists.html"> Artists </a></li>
       </ul>
