--- a/client/venues.html
+++ b/client/venues.html
@@ -6,7 +6,7 @@
     <title> Sad Dads - Venues </title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,12 +26,12 @@
       </ul>
     </div>
 <div class="venue-list" class="container">
-  <ul class="venues">
+  <!-- <ul class="venues">
     <li class="venues" id="venue1"><a href="#"></a></li>
     <li class="venues" id="venue2"><a href="#"></a></li>
     <li class="venues" id="venue3"><a href="#"></a></li>
     <li class="venues" id="venue4"><a href="#"></a></li>
-  </ul>
+  </ul> -->
 </div>
 <footer>
   <div id="year"></div>
