--- a/client/venues.html
+++ b/client/venues.html
@@ -26,12 +26,8 @@
       </ul>
     </div>
 <div class="venue-list" class="container">
-  <!-- <ul class="venues">
-    <li class="venues" id="venue1"><a href="#"></a></li>
-    <li class="venues" id="venue2"><a href="#"></a></li>
-    <li class="venues" id="venue3"><a href="#"></a></li>
-    <li class="venues" id="venue4"><a href="#"></a></li>
-  </ul> -->
+  <ul class="venues">
+  </ul>
 </div>
 <footer>
   <div id="year"></div>
