more progress with DOM & axios calls

--- a/client/concerts.html
+++ b/client/concerts.html
@@ -16,10 +16,10 @@
       <h3><a href="/client/home.html">Sad Dads</a></h3>
     </header>
     <div class="menu">
-      <ul class="menu">
-        <li id="concertsLink"><a href="/client/concerts.html"> Concerts </a></li>
-        <li id="venues"><a href="/client/venues.html"> Venues </a></li>
-        <li id="artists"><a href="/client/artists.html"> Artists </a></li>
+      <ul>
+        <li id="concerts"><a href="/client/concerts.html" class="menu"> Concerts </a></li>
+        <li id="venues"><a href="/client/venues.html" class="menu"> Venues </a></li>
+        <li id="artists"><a href="/client/artists.html" class="menu"> Artists </a></li>
       </ul>
     </div>
     <div class="concert-list" class="container">
