--- a/client/venues.html
+++ b/client/venues.html
@@ -20,9 +20,9 @@
     </header>
     <div class="menu">
       <ul>
-        <li id="concerts"><a href="/client/concerts.html"> Concerts </a></li>
-        <li id="venues"><a href="/client/venues.html"> Venues </a></li>
-        <li id="artists"><a href="/client/artists.html"> Artists </a></li>
+        <li id="concerts"><a href="/client/concerts.html" class="menu"> Concerts </a></li>
+        <li id="venues"><a href="/client/venues.html" class="menu"> Venues </a></li>
+        <li id="artists"><a href="/client/artists.html" class="menu"> Artists </a></li>
       </ul>
     </div>
 <div class="venue-list" class="container">
