linked single-page file to index landing page

--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
     </header>
     <div>
       <div class="enter">
-        <button><a href="/client/home.html"> Enter Site </a></button>
+        <button class="enter"><a href="/client/single-page.html"> Enter Site </a></button>
       </div>
     </div>
     <footer>
