--- a/client/single-page.html
+++ b/client/single-page.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <h3><!-- <a href="/client/index.html"> -->Sad Dads<!-- </a> --></h3>
+      <h3 id="landing"><!-- <a href="/client/index.html"> -->Sad Dads<!-- </a> --></h3>
     </header>
     <div class="menu">
       <ul>
@@ -27,11 +27,6 @@
     </div>
     <div class="container">
     <div class="main-content">
-      <!-- <img
-        src="/images/matt-berninger-sep-2018-2-3.png"
-        class="hero-image"
-        alt="A photo of Matt Berninger singing live. He is leaning into the microphone and has his right hand extended over his head."
-      /> -->
     </div>
     </div>
     <footer>
