--- a/client/single-page.html
+++ b/client/single-page.html
@@ -28,6 +28,9 @@
     <div class="container">
     <div class="main-content">
     </div>
+    <div class="add">
+        <button class="add">Add</button>
+    </div>
     </div>
     <footer>
       <div id="year"></div>
