minor CSS changes; added boilerplate for add.html file

--- a/client/single-page.html
+++ b/client/single-page.html
@@ -20,9 +20,9 @@
     </header>
     <div class="menu">
       <ul>
-        <li class="menu"><button id="concerts"> Concerts </li>
-        <li class="menu"><button id="venues"> Venues </li>
-        <li class="menu"><button id="artists"> Artists </li>
+        <li class="menu"><button id="concerts"> Concerts </button></li>
+        <li class="menu"><button id="venues"> Venues </button></li>
+        <li class="menu"><button id="artists"> Artists </button></li>
       </ul>
     </div>
     <div class="container">
