reverted some changes for add.html

--- a/client/add.html
+++ b/client/add.html
@@ -16,21 +16,20 @@
   </head>
   <body>
     <header>
-      <h3 id="landing"> Sad Dads </h3>
+      <h3 id="landing">Sad Dads</h3>
     </header>
     <div class="menu">
       <ul>
-        <li class="menu"><button id="concerts"> Concerts </button></li>
-        <li class="menu"><button id="venues"> Venues </button></li>
-        <li class="menu"><button id="artists"> Artists </button></li>
+        <li class="menu"><button id="concerts">Concerts</button></li>
+        <li class="menu"><button id="venues">Venues</button></li>
+        <li class="menu"><button id="artists">Artists</button></li>
       </ul>
     </div>
     <div class="container">
-    <div class="main-content">
-    </div>
-    <div class="add">
-        <button class="add">Add</button>
-    </div>
+      <div class="main-content"></div>
+      <div class="add">
+          <!-- <h4> Add a concert, venue, or artist </h4> -->
+      </div>
     </div>
     <footer>
       <div id="year"></div>
