--- a/client/single-page.html
+++ b/client/single-page.html
@@ -28,9 +28,7 @@
     <div class="container">
     <div class="main-content">
     </div>
-    <div class="add">
-        <button class="add">Add</button>
-    </div>
+    <div class="add"></div>
     </div>
     <footer>
       <div id="year"></div>
