add concert form submission logs values as an object to console

--- a/client/add.html
+++ b/client/add.html
@@ -28,16 +28,16 @@
     <div class="container">
       <div class="main-content"></div>
       <div class="add">
-          <h4> Add a concert, venue, or artist </h4>
-          <form class="add">
-            <label for="vName">Venue:</label>
-            <input type="text" name="vName" placeholder="venue name"><br />
-            <label for="vLoc">Location:</label>
-            <input type="text" name="vLoc" placeholder="city, state"><br />
-            <label for="cDate">Concert date:</label>
-            <input type="text" name="cDate" placeholder="mmm, DD, YYYY"><br />
-            <label for="aName">Artist:</label>
-            <input type="text" name="aName" placeholder="artist name"><br />
+          <h4> Save another concert: </h4>
+          <form id="add">
+            <label for="venue_id">Venue:</label>
+            <input type="text" name="venue_id" id="venue_id" placeholder="venue name"><br />
+            <label for="location">Location:</label>
+            <input type="text" name="location" id="location" placeholder="city, state"><br />
+            <label for="concert_day">Concert date:</label>
+            <input type="text" name="concert_day" id="concert_day" placeholder="jan 1, 2000"><br />
+            <label for="lineup">Artist:</label>
+            <input type="text" name="lineup" id="lineup" placeholder="artist name"><br />
             <input type="submit" class="submit">
           </form>
       </div>
