form working to post data back to API; confirmed front-end updates to reflect new concert added

--- a/client/add.html
+++ b/client/add.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sad Dads - Home</title>
     <link href="singlepage-style.css" rel="stylesheet" />
-    <script defer src="add.js"></script>
+    <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
