--- a/client/add.html
+++ b/client/add.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sad Dads - Home</title>
     <link href="style.css" rel="stylesheet" />
-    <script defer src="script.js"></script>
+    <script defer src="add.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <h3 id="landing">Sad Dads</h3>
+      <h3 id="landing"><a href="/client/single-page.html">Sad Dads</a></h3>
     </header>
     <div class="menu">
       <ul>
