cleaned up code for presentation

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,9 @@
     </header>
     <div>
       <div class="enter">
-        <button class="enter"><a href="/client/single-page.html"> Enter Site </a></button>
+        <button class="enter">
+          <a href="/client/main.html"> Enter Site </a>
+        </button>
       </div>
     </div>
     <footer>
