--- a/client/main.html
+++ b/client/main.html
@@ -20,15 +20,14 @@
     </header>
     <div class="menu">
       <ul>
-        <li class="menu"><button id="concerts"> Concerts </button></li>
-        <li class="menu"><button id="venues"> Venues </button></li>
-        <li class="menu"><button id="artists"> Artists </button></li>
+        <li class="menu"><a href="#" id="concerts"> Concerts </a></li>
+        <li class="menu"><a href="#" id="venues"> Venues </a></li>
+        <li class="menu"><a href="#" id="artists"> Artists </a></li>
       </ul>
     </div>
     <div class="container">
-    <div class="main-content">
-    </div>
-    <div class="add"></div>
+      <div class="main-content"></div>
+      <div class="add"></div>
     </div>
     <footer>
       <div id="year"></div>
