--- a/client/add.html
+++ b/client/add.html
@@ -6,6 +6,7 @@
     <title>Sad Dads - Home</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="add.js"></script>
+    <script defer src="script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,18 +29,38 @@
     <div class="container">
       <div class="main-content"></div>
       <div class="add">
-          <h4> Save another concert: </h4>
-          <form id="add">
-            <label for="venue_id">Venue:</label>
-            <input type="text" name="venue_id" id="venue_id" placeholder="venue name"><br />
-            <label for="location">Location:</label>
-            <input type="text" name="location" id="location" placeholder="city, state"><br />
-            <label for="concert_day">Concert date:</label>
-            <input type="text" name="concert_day" id="concert_day" placeholder="jan 1, 2000"><br />
-            <label for="lineup">Artist:</label>
-            <input type="text" name="lineup" id="lineup" placeholder="artist name"><br />
-            <input type="submit" class="submit">
-          </form>
+        <h4>Save another concert:</h4>
+        <form id="add">
+          <label for="venue_id">Venue:</label>
+          <input
+            type="text"
+            name="venue_id"
+            id="venue_id"
+            placeholder="venue name"
+          /><br />
+          <label for="location">Location:</label>
+          <input
+            type="text"
+            name="location"
+            id="location"
+            placeholder="city, state"
+          /><br />
+          <label for="concert_day">Concert date:</label>
+          <input
+            type="text"
+            name="concert_day"
+            id="concert_day"
+            placeholder="jan 1, 2000"
+          /><br />
+          <label for="lineup">Artist:</label>
+          <input
+            type="text"
+            name="lineup"
+            id="lineup"
+            placeholder="artist name"
+          /><br />
+          <input type="submit" class="submit" />
+        </form>
       </div>
     </div>
     <footer>
