fixed broken link back to main page

--- a/client/add.html
+++ b/client/add.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <h3 id="landing"><a href="/client/single-page.html">Sad Dads</a></h3>
+      <h3 id="landing"><a href="/client/main.html">Sad Dads</a></h3>
     </header>
     <div class="menu">
       <ul>
