cleaned up code

--- a/client/add.html
+++ b/client/add.html
@@ -9,10 +9,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -31,12 +28,7 @@
         <h4>Save another concert:</h4>
         <form id="add">
           <label for="venue_id">Venue:</label>
-          <input
-            type="text"
-            name="venue_id"
-            id="venue_id"
-            placeholder="venue name"
-          /><br />
+          <input type="text" name="venue_id" id="venue_id" placeholder="venue name"/><br />
           <label for="location">Location:</label>
           <input
             type="text"
