--- a/client/add.html
+++ b/client/add.html
@@ -30,26 +30,11 @@
           <label for="venue_id">Venue:</label>
           <input type="text" name="venue_id" id="venue_id" placeholder="venue name"/><br />
           <label for="location">Location:</label>
-          <input
-            type="text"
-            name="location"
-            id="location"
-            placeholder="city, state"
-          /><br />
+          <input type="text" name="location" id="location" placeholder="city, state" /><br />
           <label for="concert_day">Concert date:</label>
-          <input
-            type="text"
-            name="concert_day"
-            id="concert_day"
-            placeholder="jan 1, 2000"
-          /><br />
+          <input type="text" name="concert_day" id="concert_day" placeholder="jan 1, 2000" /><br />
           <label for="lineup">Artist:</label>
-          <input
-            type="text"
-            name="lineup"
-            id="lineup"
-            placeholder="artist name"
-          /><br />
+          <input type="text" name="lineup" id="lineup" placeholder="artist name" /><br />
           <input type="submit" class="submit" />
         </form>
       </div>
