reverted problematic changes

--- a/client/artists.html
+++ b/client/artists.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <h3><a href="/client/home.html">Sad Dads</a></h3>
+      <h3><a href="/client/index.html">Sad Dads</a></h3>
     </header>
     <div class="menu">
       <ul>
